--- a/streamingpro-mlsql/pom.xml
+++ b/streamingpro-mlsql/pom.xml
@@ -138,6 +138,17 @@
         </profile>
 
         <profile>
+            <id>automl</id>
+            <dependencies>
+                <dependency>
+                    <groupId>streaming.king</groupId>
+                    <artifactId>streamingpro-automl</artifactId>
+                    <version>${project.parent.version}</version>
+                </dependency>
+            </dependencies>
+        </profile>
+
+        <profile>
             <id>streamingpro-spark-2.2.0-adaptor</id>
             <dependencies>
                 <dependency>
