[DEV][add] 添加assembly模块

--- a/pom.xml
+++ b/pom.xml
@@ -376,6 +376,12 @@
                 </plugins>
             </build>
         </profile>
+        <profile>
+            <id>assembly</id>
+            <modules>
+                <module>streamingpro-assembly</module>
+            </modules>
+        </profile>
     </profiles>
     <dependencies>
 
