--- a/streamingpro-crawler/pom.xml
+++ b/streamingpro-crawler/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>streamigpro-crawler</artifactId>
+    <artifactId>streamingpro-crawler</artifactId>
 
     <dependencies>
         <dependency>
