--- a/streamingpro-mlsql/pom.xml
+++ b/streamingpro-mlsql/pom.xml
@@ -120,7 +120,7 @@
             <dependencies>
                 <dependency>
                     <groupId>streaming.king</groupId>
-                    <artifactId>streamigpro-crawler</artifactId>
+                    <artifactId>streamingpro-crawler</artifactId>
                     <version>${project.parent.version}</version>
                 </dependency>
             </dependencies>
