--- a/streamingpro-mlsql/pom.xml
+++ b/streamingpro-mlsql/pom.xml
@@ -149,6 +149,17 @@
         </profile>
 
         <profile>
+            <id>bigdl</id>
+            <dependencies>
+                <dependency>
+                    <groupId>streaming.king</groupId>
+                    <artifactId>streamingpro-bigdl</artifactId>
+                    <version>${project.parent.version}</version>
+                </dependency>
+            </dependencies>
+        </profile>
+
+        <profile>
             <id>streamingpro-spark-2.2.0-adaptor</id>
             <dependencies>
                 <dependency>
@@ -241,9 +252,9 @@
             </properties>
             <dependencies>
                 <!--<dependency>-->
-                    <!--<groupId>org.elasticsearch</groupId>-->
-                    <!--<artifactId>elasticsearch-spark-20_2.11</artifactId>-->
-                    <!--<version>5.5.2</version>-->
+                <!--<groupId>org.elasticsearch</groupId>-->
+                <!--<artifactId>elasticsearch-spark-20_2.11</artifactId>-->
+                <!--<version>5.5.2</version>-->
                 <!--</dependency>-->
                 <dependency>
                     <groupId>streaming.king</groupId>
