--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,7 @@
         <module>streamingpro-opencv</module>
         <module>streamingpro-jython</module>
         <module>streamingpro-automl</module>
+        <module>streamingpro-bigdl</module>
     </modules>
 
     <properties>
@@ -56,6 +57,7 @@
         </spark.streaming.kafka.artifactId>
         <spark.sql.kafka.artifactId>spark-sql-kafka-0-10_${scala.binary.version}</spark.sql.kafka.artifactId>
         <spark.version>2.2.0</spark.version>
+        <spark.bigversion>2.2</spark.bigversion>
 
         <flink.version>1.4.2</flink.version>
         <guava.version>16.0</guava.version>
@@ -179,6 +181,7 @@
                 </spark.streaming.kafka.artifactId>
                 <spark.sql.kafka.artifactId>spark-sql-kafka-0-10_${scala.binary.version}</spark.sql.kafka.artifactId>
                 <spark.version>2.2.0</spark.version>
+                <spark.bigversion>2.2</spark.bigversion>
             </properties>
             <modules>
                 <module>streamingpro-spark-2.2.0-adaptor</module>
@@ -246,6 +249,7 @@
                 </spark.streaming.kafka.artifactId>
                 <spark.sql.kafka.artifactId>spark-sql-kafka-0-10_${scala.binary.version}</spark.sql.kafka.artifactId>
                 <spark.version>2.3.2</spark.version>
+                <spark.bigversion>2.3</spark.bigversion>
             </properties>
             <modules>
                 <module>streamingpro-spark-2.3.0-adaptor</module>
