--- a/streamingpro-bigdl/pom.xml
+++ b/streamingpro-bigdl/pom.xml
@@ -16,6 +16,11 @@
             <artifactId>bigdl-SPARK_${spark.bigversion}</artifactId>
             <version>0.6.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.intel.analytics.zoo</groupId>
+            <artifactId>analytics-zoo-bigdl_0.6.0-spark_2.2.0</artifactId>
+            <version>0.2.0</version>
+        </dependency>
     </dependencies>
 
 </project>
