--- a/examples/sklearn_elasticnet_wine/conda.yaml
+++ b/examples/sklearn_elasticnet_wine/conda.yaml
@@ -5,8 +5,8 @@ dependencies:
   - python=2.7
   - pip:
     - mlflow
-    - numpy=1.14.3
+    - numpy==1.14.3
     - kafka-python==1.4.3
     - pyspark==2.3.1
-    - pandas=0.22.0
-    - scikit-learn=0.19.1
+    - pandas==0.22.0
+    - scikit-learn==0.19.1
