--- a/streamingpro-bigdl/pom.xml
+++ b/streamingpro-bigdl/pom.xml
@@ -12,14 +12,9 @@
     <artifactId>streamingpro-bigdl</artifactId>
     <dependencies>
         <dependency>
-            <groupId>com.intel.analytics.bigdl</groupId>
-            <artifactId>bigdl-SPARK_${spark.bigversion}</artifactId>
-            <version>0.7.0</version>
-        </dependency>
-        <dependency>
             <groupId>com.intel.analytics.zoo</groupId>
-            <artifactId>analytics-zoo-bigdl_0.6.0-spark_2.2.0</artifactId>
-            <version>0.2.0</version>
+            <artifactId>analytics-zoo-bigdl_0.7.1-spark_${spark.version.minor}</artifactId>
+            <version>0.3.0</version>
         </dependency>
     </dependencies>
 
