--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,6 @@
         <module>streamingpro-opencv</module>
         <module>streamingpro-jython</module>
         <module>streamingpro-automl</module>
-        <module>streamingpro-bigdl</module>
     </modules>
 
     <properties>
@@ -58,8 +57,6 @@
         <spark.sql.kafka.artifactId>spark-sql-kafka-0-10_${scala.binary.version}</spark.sql.kafka.artifactId>
         <spark.version>2.2.0</spark.version>
         <spark.bigversion>2.2</spark.bigversion>
-
-        <spark.version.minor>2.2.0</spark.version.minor>
 
 
         <flink.version>1.4.2</flink.version>
@@ -185,7 +182,7 @@
                 <spark.sql.kafka.artifactId>spark-sql-kafka-0-10_${scala.binary.version}</spark.sql.kafka.artifactId>
                 <spark.version>2.2.0</spark.version>
                 <spark.bigversion>2.2</spark.bigversion>
-                <spark.version.minor>2.2.0</spark.version.minor>
+                <bigdl.spark.version.minor>2.2.0</bigdl.spark.version.minor>
             </properties>
             <modules>
                 <module>streamingpro-spark-2.2.0-adaptor</module>
@@ -254,7 +251,7 @@
                 <spark.sql.kafka.artifactId>spark-sql-kafka-0-10_${scala.binary.version}</spark.sql.kafka.artifactId>
                 <spark.version>2.3.2</spark.version>
                 <spark.bigversion>2.3</spark.bigversion>
-                <spark.version.minor>2.3.1</spark.version.minor>
+                <bigdl.spark.version.minor>2.3.1</bigdl.spark.version.minor>
             </properties>
             <modules>
                 <module>streamingpro-spark-2.3.0-adaptor</module>
@@ -323,7 +320,7 @@
                 <spark.sql.kafka.artifactId>spark-sql-kafka-0-10_${scala.binary.version}</spark.sql.kafka.artifactId>
                 <spark.version>2.4.0</spark.version>
                 <spark.bigversion>2.4</spark.bigversion>
-                <spark.version.minor>2.4.0</spark.version.minor>
+                <bigdl.spark.version.minor>2.4.0</bigdl.spark.version.minor>
             </properties>
             <modules>
                 <module>streamingpro-spark-2.4.0-adaptor</module>
