--- a/streamingpro-mlsql/pom.xml
+++ b/streamingpro-mlsql/pom.xml
@@ -161,11 +161,11 @@
                     <artifactId>bigdl-SPARK_2.2</artifactId>
                     <version>0.6.0</version>
                 </dependency>
-                <dependency>
-                    <groupId>com.intel.analytics.zoo</groupId>
-                    <artifactId>analytics-zoo-bigdl_0.6.0-spark_2.2.0</artifactId>
-                    <version>0.3.0</version>
-                </dependency>
+                <!--<dependency>-->
+                    <!--<groupId>com.intel.analytics.zoo</groupId>-->
+                    <!--<artifactId>analytics-zoo-bigdl_0.6.0-spark_2.2.0</artifactId>-->
+                    <!--<version>0.3.0</version>-->
+                <!--</dependency>-->
 
             </dependencies>
         </profile>
@@ -183,11 +183,11 @@
                     <artifactId>bigdl-SPARK_2.3</artifactId>
                     <version>0.6.0</version>
                 </dependency>
-                <dependency>
-                    <groupId>com.intel.analytics.zoo</groupId>
-                    <artifactId>analytics-zoo-bigdl_0.6.0-spark_2.3.1</artifactId>
-                    <version>0.3.0</version>
-                </dependency>
+                <!--<dependency>-->
+                    <!--<groupId>com.intel.analytics.zoo</groupId>-->
+                    <!--<artifactId>analytics-zoo-bigdl_0.6.0-spark_2.3.1</artifactId>-->
+                    <!--<version>0.3.0</version>-->
+                <!--</dependency>-->
             </dependencies>
         </profile>
 
@@ -204,11 +204,11 @@
                     <artifactId>bigdl-SPARK_2.3</artifactId>
                     <version>0.6.0</version>
                 </dependency>
-                <dependency>
-                    <groupId>com.intel.analytics.zoo</groupId>
-                    <artifactId>analytics-zoo-bigdl_0.6.0-spark_2.3.1</artifactId>
-                    <version>0.3.0</version>
-                </dependency>
+                <!--<dependency>-->
+                    <!--<groupId>com.intel.analytics.zoo</groupId>-->
+                    <!--<artifactId>analytics-zoo-bigdl_0.6.0-spark_2.3.1</artifactId>-->
+                    <!--<version>0.3.0</version>-->
+                <!--</dependency>-->
             </dependencies>
         </profile>
 
