--- a/streamingpro-automl/pom.xml
+++ b/streamingpro-automl/pom.xml
@@ -54,6 +54,13 @@
             <version>${spark.version}</version>
             <scope>provided</scope>
         </dependency>
+
+        <dependency>
+            <groupId>streaming.king</groupId>
+            <artifactId>streamingpro-spark-2.4.0-adaptor</artifactId>
+            <version>${project.parent.version}</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
 </project>
