--- a/streamingpro-mlsql/pom.xml
+++ b/streamingpro-mlsql/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>streamingpro-mlsql</artifactId>
+    <artifactId>streamingpro-mlsql-spark_${spark.bigversion}</artifactId>
     <profiles>
 
         <profile>
@@ -162,9 +162,9 @@
                     <version>0.6.0</version>
                 </dependency>
                 <!--<dependency>-->
-                    <!--<groupId>com.intel.analytics.zoo</groupId>-->
-                    <!--<artifactId>analytics-zoo-bigdl_0.6.0-spark_2.2.0</artifactId>-->
-                    <!--<version>0.3.0</version>-->
+                <!--<groupId>com.intel.analytics.zoo</groupId>-->
+                <!--<artifactId>analytics-zoo-bigdl_0.6.0-spark_2.2.0</artifactId>-->
+                <!--<version>0.3.0</version>-->
                 <!--</dependency>-->
 
             </dependencies>
@@ -184,9 +184,9 @@
                     <version>0.6.0</version>
                 </dependency>
                 <!--<dependency>-->
-                    <!--<groupId>com.intel.analytics.zoo</groupId>-->
-                    <!--<artifactId>analytics-zoo-bigdl_0.6.0-spark_2.3.1</artifactId>-->
-                    <!--<version>0.3.0</version>-->
+                <!--<groupId>com.intel.analytics.zoo</groupId>-->
+                <!--<artifactId>analytics-zoo-bigdl_0.6.0-spark_2.3.1</artifactId>-->
+                <!--<version>0.3.0</version>-->
                 <!--</dependency>-->
             </dependencies>
         </profile>
@@ -205,9 +205,9 @@
                     <version>0.6.0</version>
                 </dependency>
                 <!--<dependency>-->
-                    <!--<groupId>com.intel.analytics.zoo</groupId>-->
-                    <!--<artifactId>analytics-zoo-bigdl_0.6.0-spark_2.3.1</artifactId>-->
-                    <!--<version>0.3.0</version>-->
+                <!--<groupId>com.intel.analytics.zoo</groupId>-->
+                <!--<artifactId>analytics-zoo-bigdl_0.6.0-spark_2.3.1</artifactId>-->
+                <!--<version>0.3.0</version>-->
                 <!--</dependency>-->
             </dependencies>
         </profile>
