--- a/.gitignore
+++ b/.gitignore
@@ -133,3 +133,6 @@ streamingpro-dsl-legacy/logs/
 streamingpro-api/logs
 
 dev/create-release/do-release.sh
+dev/mlsqltestssupport/__pycache__/
+dev/create-release/streamingpro*
+__pycache__
