--- a/pom.xml
+++ b/pom.xml
@@ -695,13 +695,15 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.8.1</version>
+                <version>3.0.0-M1</version>
                 <configuration>
+                    <forkCount>1</forkCount>
+                    <reuseForks>true</reuseForks>
+                    <argLine>-Xmx2024m</argLine>
                     <includes>
                         <include>**/*.java</include>
                         <include>**/*.scala</include>
                     </includes>
-                    <skipTests>true</skipTests>
                 </configuration>
 
             </plugin>
