--- a/streamingpro-flink/pom.xml
+++ b/streamingpro-flink/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>streamingpro</artifactId>
         <groupId>streaming.king</groupId>
-        <version>1.1.5-SNAPSHOT</version>
+        <version>1.1.5</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -16,7 +16,7 @@
     <dependency>
         <groupId>streaming.king</groupId>
         <artifactId>streamingpro-common</artifactId>
-        <version>1.1.5-SNAPSHOT</version>
+        <version>1.1.5</version>
     </dependency>
     <dependency>
         <groupId>org.apache.flink</groupId>
