--- a/streamingpro-mlsql/pom.xml
+++ b/streamingpro-mlsql/pom.xml
@@ -141,6 +141,10 @@
                         </exclusion>
                         <exclusion>
                             <groupId>org.apache.hadoop</groupId>
+                            <artifactId>hadoop-aws</artifactId>
+                        </exclusion>
+                        <exclusion>
+                            <groupId>org.apache.hadoop</groupId>
                             <artifactId>hadoop-hdfs</artifactId>
                         </exclusion>
 
