add exclutions in pom

--- a/streamingpro-mlsql/pom.xml
+++ b/streamingpro-mlsql/pom.xml
@@ -147,7 +147,10 @@
                             <groupId>org.apache.hadoop</groupId>
                             <artifactId>hadoop-hdfs</artifactId>
                         </exclusion>
-
+                        <exclusion>
+                            <groupId>io.netty</groupId>
+                            <artifactId>netty-all</artifactId>
+                        </exclusion>
 
                     </exclusions>
                 </dependency>
@@ -222,6 +225,12 @@
                     <groupId>com.intel.analytics.bigdl</groupId>
                     <artifactId>bigdl-SPARK_2.2</artifactId>
                     <version>0.6.0</version>
+                    <exclusions>
+                        <exclusion>
+                            <groupId>com.google.guava</groupId>
+                            <artifactId>guava</artifactId>
+                        </exclusion>
+                    </exclusions>
                 </dependency>
                 <!--<dependency>-->
                 <!--<groupId>com.intel.analytics.zoo</groupId>-->
@@ -244,6 +253,12 @@
                     <groupId>com.intel.analytics.bigdl</groupId>
                     <artifactId>bigdl-SPARK_2.3</artifactId>
                     <version>0.6.0</version>
+                    <exclusions>
+                        <exclusion>
+                            <groupId>com.google.guava</groupId>
+                            <artifactId>guava</artifactId>
+                        </exclusion>
+                    </exclusions>
                 </dependency>
                 <!--<dependency>-->
                 <!--<groupId>com.intel.analytics.zoo</groupId>-->
@@ -265,6 +280,12 @@
                     <groupId>com.intel.analytics.bigdl</groupId>
                     <artifactId>bigdl-SPARK_2.3</artifactId>
                     <version>0.6.0</version>
+                    <exclusions>
+                        <exclusion>
+                            <groupId>com.google.guava</groupId>
+                            <artifactId>guava</artifactId>
+                        </exclusion>
+                    </exclusions>
                 </dependency>
                 <!--<dependency>-->
                 <!--<groupId>com.intel.analytics.zoo</groupId>-->
@@ -487,6 +508,14 @@
                 <exclusion>
                     <groupId>com.google.code.gson</groupId>
                     <artifactId>gson</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>com.google.code.gson</groupId>
+                    <artifactId>gson</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>io.netty</groupId>
+                    <artifactId>netty</artifactId>
                 </exclusion>
             </exclusions>
         </dependency>
