resolve some jar conflicts

--- a/streamingpro-crawler/pom.xml
+++ b/streamingpro-crawler/pom.xml
@@ -84,6 +84,10 @@
                     <groupId>com.mchange</groupId>
                     <artifactId>c3p0</artifactId>
                 </exclusion>
+                <exclusion>
+                    <groupId>org.apache.avro</groupId>
+                    <artifactId>avro</artifactId>
+                </exclusion>
             </exclusions>
         </dependency>
 
