--- a/streamingpro-mlsql/src/main/resources-local/application.yml
+++ b/streamingpro-mlsql/src/main/resources-local/application.yml
@@ -18,7 +18,7 @@ test:
            disable: true
 
 application:
-    controllerNames: streaming.rest.RestController,streaming.rest.RestPredictController
+    controller: streaming.rest
     service:
     util:
     test:
