--- a/contri/streamingpro-opencv/pom.xml
+++ b/contri/streamingpro-opencv/pom.xml
@@ -6,6 +6,7 @@
         <artifactId>streamingpro</artifactId>
         <groupId>streaming.king</groupId>
         <version>1.1.6-SNAPSHOT</version>
+        <relativePath>../../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
