--- a/streamingpro-cluster/src/main/resources/application.yml
+++ b/streamingpro-cluster/src/main/resources/application.yml
@@ -48,6 +48,10 @@ http:
   disable: false
   host: 0.0.0.0
   port: 8080
+  client:
+    accept:
+      timeout: 43200000
+
 thrift:
   disable: true
 dubbo:
