supports local mode allocate strategy

--- a/streamingpro-cluster/src/main/resources/logging.yml
+++ b/streamingpro-cluster/src/main/resources/logging.yml
@@ -7,7 +7,7 @@ logging:
 appender:
   console:
     type: console
-    threshold: INFO
+    threshold: DEBUG
     layout:
       type: consolePattern
       conversionPattern: "[%d{ISO8601}][%-5p][%-25c] %m%n"
