--- a/streamingpro-mlsql/src/main/resources-online/log4j.properties
+++ b/streamingpro-mlsql/src/main/resources-online/log4j.properties
@@ -26,6 +26,9 @@ log4j.appender.console.layout.ConversionPattern=%d{yy/MM/dd HH:mm:ss} %p %c{1}: 
 # log level for this class is used to overwrite the root logger's log level, so that
 # the user can have different defaults for the shell and regular Spark apps.
 log4j.logger.org.apache.spark.repl.Main=WARN
+log4j.logger.org.apache.spark=WARN
+log4j.logger.streaming.core.strategy.platform.SparkRuntime=WARN
+
 
 # Settings to quiet third party logs that are too verbose
 log4j.logger.org.spark_project.jetty=WARN
