--- a/.gitignore
+++ b/.gitignore
@@ -153,3 +153,4 @@ streamingpro-cluster/dev/mlsql-cluster-docker/*.yml
 streamingpro-cluster/dev/mlsql-cluster-docker/*.tar.gz
 dev/sync-doc.sh
 docs/gitbook/zh/_book/
+contri/streamingpro-automl/logs/
